removed all deprecated methods